[package]
name = "bevy_sprite3d"
version = "2.7.0"
edition = "2021"

description = "Bevy Plugin to allow using 2d sprites in a 3d scene."
license = "MIT"
readme = "readme.md"
repository = "https://github.com/FraserLee/bevy_sprite3d"
keywords = ["gamedev", "bevy", "sprite", "3d"]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = ["bevy_asset", "bevy_pbr", "bevy_sprite"]

[dev-dependencies]
bevy.git = "https://github.com/bevyengine/bevy"
rand = "0.8"
